@@ -118,6 +118,9 @@ void Flipper::SetDefaults(bool fromMouseClick)
    hr = GetRegStringAsFloat("DefaultProps\\Flipper", "EOSTorque", &fTmp);
    m_d.m_torqueDamping = (hr == S_OK) && fromMouseClick ? fTmp : 0.75f;
 
+   hr = GetRegStringAsFloat("DefaultProps\\Flipper", "EOSTorqueAngle", &fTmp);
+   m_d.m_torqueDampingAngle = (hr == S_OK) && fromMouseClick ? fTmp : 6.f;
+
    hr = GetRegStringAsFloat("DefaultProps\\Flipper", "StartAngle", &fTmp);
    m_d.m_StartAngle = (hr == S_OK) && fromMouseClick ? fTmp : 121.f;
 
@@ -200,6 +203,7 @@ void Flipper::WriteRegDefaults()
    static const char regKey[] = "DefaultProps\\Flipper";
 
    SetRegValueFloat(regKey, "EOSTorque", m_d.m_torqueDamping);
+   SetRegValueFloat(regKey, "EOSTorqueAngle", m_d.m_torqueDampingAngle);
    SetRegValueFloat(regKey, "StartAngle", m_d.m_StartAngle);
    SetRegValueFloat(regKey, "EndAngle", m_d.m_EndAngle);
    SetRegValueFloat(regKey, "BaseRadius", m_d.m_BaseRadius);
@@ -331,7 +335,9 @@ void Flipper::GetHitShapes(Vector<HitObject> * const pvho)
 
    phf->m_flipperanim.m_EnableRotateEvent = 0;
    phf->m_pfe = NULL;
+
    phf->m_flipperanim.m_torqueDamping = m_d.m_torqueDamping;
+   phf->m_flipperanim.m_torqueDampingAngle = m_d.m_torqueDampingAngle;
 
    phf->m_flipperanim.m_fEnabled = m_d.m_fEnabled;
    phf->m_flipperanim.m_fVisible = m_d.m_fVisible;
@@ -603,6 +609,7 @@ void Flipper::SetDefaultPhysics(bool fromMouseClick)
    m_d.m_scatter = GetRegStringAsFloatWithDefault( "DefaultProps\\Flipper", "Scatter", 0.0f );
 
    m_d.m_torqueDamping = GetRegStringAsFloatWithDefault( "DefaultProps\\Flipper", "EOSTorque", 0.75f );
+   m_d.m_torqueDampingAngle = GetRegStringAsFloatWithDefault("DefaultProps\\Flipper", "EOSTorqueAngle", 6.f);
 }
 
 STDMETHODIMP Flipper::InterfaceSupportsErrorInfo(REFIID riid)
@@ -946,6 +953,7 @@ HRESULT Flipper::SaveData(IStream *pstm, HCRYPTHASH hcrypthash, HCRYPTKEY hcrypt
    bw.WriteFloat(FID(RPUP), m_d.m_rampUp);
    bw.WriteFloat(FID(SCTR), m_d.m_scatter);
    bw.WriteFloat(FID(TODA), m_d.m_torqueDamping);
+   bw.WriteFloat(FID(TDAA), m_d.m_torqueDampingAngle);
    bw.WriteBool(FID(VSBL), m_d.m_fVisible);
    bw.WriteBool(FID(ENBL), m_d.m_fEnabled);
    bw.WriteFloat(FID(FRMN), m_d.m_FlipperRadiusMin);
@@ -1102,11 +1110,15 @@ BOOL Flipper::LoadToken(int id, BiffReader *pbr)
    }
    else if (id == FID(SCTR))
    {
-	  pbr->GetFloat(&m_d.m_scatter);
+      pbr->GetFloat(&m_d.m_scatter);
    }
    else if ( id == FID( TODA ) )
    {
-       pbr->GetFloat( &m_d.m_torqueDamping );
+      pbr->GetFloat( &m_d.m_torqueDamping );
+   }
+   else if (id == FID(TDAA))
+   {
+      pbr->GetFloat(&m_d.m_torqueDampingAngle);
    }
    else if (id == FID(FRMN))
    {
@@ -1207,9 +1219,7 @@ STDMETHODIMP Flipper::put_Length(float newVal)
 STDMETHODIMP Flipper::get_EOSTorque(float *pVal)
 {
     if ( m_phitflipper )
-    {
         *pVal = m_phitflipper->m_flipperanim.m_torqueDamping;
-    }
     else
         *pVal = m_d.m_torqueDamping;
 
@@ -1226,7 +1236,34 @@ STDMETHODIMP Flipper::put_EOSTorque(float newVal)
     else
     {
         STARTUNDO
-            m_d.m_torqueDamping = newVal;
+        m_d.m_torqueDamping = newVal;
+        STOPUNDO
+    }
+
+    return S_OK;
+}
+
+STDMETHODIMP Flipper::get_EOSTorqueAngle(float *pVal)
+{
+    if ( m_phitflipper )
+        *pVal = m_phitflipper->m_flipperanim.m_torqueDampingAngle;
+    else
+        *pVal = m_d.m_torqueDampingAngle;
+
+    return S_OK;
+}
+
+STDMETHODIMP Flipper::put_EOSTorqueAngle(float newVal)
+{
+    if ( m_phitflipper )
+    {
+        m_phitflipper->m_flipperanim.m_torqueDampingAngle = newVal;
+        m_d.m_torqueDampingAngle = newVal;    
+    }
+    else
+    {
+        STARTUNDO
+        m_d.m_torqueDampingAngle = newVal;
         STOPUNDO
     }
 
