@@ -7640,6 +7640,10 @@ void savecurrentphysicssetting(HWND hwndDlg)
    sprintf_s(tmp2, 256, "FlipperPhysicsEOSTorque%u", physicsselection);
    SetRegValue("Player", tmp2, REG_SZ, tmp, lstrlen(tmp));
 
+   GetDlgItemTextA(hwndDlg, 189, tmp, 256);
+   sprintf_s(tmp2, 256, "FlipperPhysicsEOSTorqueAngle%u", physicsselection);
+   SetRegValue("Player", tmp2, REG_SZ, tmp, lstrlen(tmp));
+
    GetDlgItemTextA(hwndDlg, 23, tmp, 256);
    sprintf_s(tmp2, 256, "FlipperPhysicsReturnStrength%u", physicsselection);
    SetRegValue("Player", tmp2, REG_SZ, tmp, lstrlen(tmp));
@@ -7779,6 +7783,15 @@ INT_PTR CALLBACK PhysicsOptionsProc(HWND hwndDlg, UINT uMsg, WPARAM wParam, LPAR
 
       sprintf_s(tmp, 256, "%f", FlipperPhysicsTorqueDamping);
       SetDlgItemTextA(hwndDlg, 113, tmp);
+
+      float FlipperPhysicsTorqueDampingAngle = 6.f;
+      sprintf_s(tmp, 256, "FlipperPhysicsEOSTorqueAngle%u", physicsselection);
+      hr = GetRegStringAsFloat("Player", tmp, &FlipperPhysicsTorqueDampingAngle);
+      if (hr != S_OK)
+         FlipperPhysicsTorqueDampingAngle = 6.f;
+
+      sprintf_s(tmp, 256, "%f", FlipperPhysicsTorqueDampingAngle);
+      SetDlgItemTextA(hwndDlg, 189, tmp);
 
       float FlipperPhysicsReturnStrength = 0.058f;
       sprintf_s(tmp, 256, "FlipperPhysicsReturnStrength%u", physicsselection);
@@ -7954,6 +7967,7 @@ INT_PTR CALLBACK PhysicsOptionsProc(HWND hwndDlg, UINT uMsg, WPARAM wParam, LPAR
                 SetDlgItemTextA(hwndDlg, 21, flipper->first_node("elasticity")->value());
                 SetDlgItemTextA(hwndDlg, 112, flipper->first_node("scatter")->value());
                 SetDlgItemTextA(hwndDlg, 113, flipper->first_node("eosTorque")->value());
+                SetDlgItemTextA(hwndDlg, 189, flipper->first_node("eosTorqueAngle")->value());
                 SetDlgItemTextA(hwndDlg, 23, flipper->first_node("returnStrength")->value());
                 SetDlgItemTextA(hwndDlg, 22, flipper->first_node("elasticityFalloff")->value());
                 SetDlgItemTextA(hwndDlg, 109, flipper->first_node("friction")->value());
@@ -8034,6 +8048,10 @@ INT_PTR CALLBACK PhysicsOptionsProc(HWND hwndDlg, UINT uMsg, WPARAM wParam, LPAR
             GetDlgItemTextA(hwndDlg, 113, tmp, 256);
             xml_node<>*flipTorqueDamping = xmlDoc.allocate_node(node_element, "eosTorque", (new string(tmp))->c_str());
             flipper->append_node(flipTorqueDamping);
+
+            GetDlgItemTextA(hwndDlg, 189, tmp, 256);
+            xml_node<>*flipTorqueDampingAngle = xmlDoc.allocate_node(node_element, "eosTorqueAngle", (new string(tmp))->c_str());
+            flipper->append_node(flipTorqueDampingAngle);
 
             GetDlgItemTextA(hwndDlg, 23, tmp, 256);
             xml_node<>*flipReturnStrength = xmlDoc.allocate_node(node_element, "returnStrength", (new string(tmp))->c_str());
